@@ -258,3 +258,4 @@ m4_include(tests/t_heads_discontinuous_branch.at)
 m4_include(tests/t_merge_1.at)
 m4_include(tests/t_tags.at)
 m4_include(tests/t_add_dot.at)
+m4_include(tests/t_cleanup_empty_dir.at)
